--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -25,5 +25,5 @@ jobs:
         with:
           push: true
           tags: |
-            mhndgh/app:latest
-            mhndgh/app:${{ github.sha }}
+            mhndgh/capstone-project:latest
+            mhndgh/capstone-project:${{ github.sha }}
