--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Ducker Hub
-        uses: docker/login-actions@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOUCKERHUB_USERNAME }}
           password: ${{ secrets.DOUCKERHUB_TOKEN }}
