--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Login to Ducker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOUCKERHUB_USERNAME }}
+          username: mhndgh
           password: ${{ secrets.DOUCKERHUB_TOKEN }}
             
       - name: Build and Push
