--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -6,22 +6,39 @@ on:
         - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up docker buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Ducker Hub
-        uses: docker/login-action@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
         with:
-          username: ${{ secrets.DOUCKERHUB_USERNAME }}
-          password: ${{ secrets.DOUCKERHUB_TOKEN }}
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          python test_app.py
+
   build-and-push-image:
     runs-on: ubuntu-latest
+    needs: test
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and Push
         uses: docker/build-push-action@v3
         with:
