--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOUCKERHUB_USERNAME }}
+          password: ${{ secrets.DOUCKERHUB_TOKEN }}
       - name: Build and Push
         uses: docker/build-push-action@v3
         with:
