--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
         - main
+  pull_request:
+    branches:
+        - main
 
 jobs:
   test:
@@ -26,6 +29,7 @@ jobs:
           python test_app.py
 
   build-and-push-image:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: test
     steps:
