--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -15,11 +15,18 @@ services:
 
   redis:
     image: redis
+    ports:
+      - 6379:6379
 
   db:
     image: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: mydatabase
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      DB_ROOT_PASSWORD: password
+      DB_NAME: mydatabase
+      DB_USER: user
+      DB_PASSWORD: password
+      DB_HOST: db
+    volumes:
+      - ./data:/var/lib/mysql
+    ports:
+      - 3306:3306
