--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -19,7 +19,8 @@ services:
   db:
     image: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: mydatabase
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      DB_ROOT_PASSWORD: password
+      DB_DATABASE: mydatabase
+      DB_USER: user
+      DB_PASSWORD: password
+      DB_HOST: db
