--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -20,6 +20,8 @@ services:
   db:
     image: mysql
     restart: always
+    ports:
+      - 3306:3306
     environment:
       DB_USER: user
       DB_PASSWORD: password
