--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -28,5 +28,5 @@ services:
       MYSQL_DATABASE: mydatabase
       MYSQL_ROOT_PASSWORD: password
     volumes:
-      - ./data:/var/lib/mysql
+      - db-data:/var/lib/mysql
     
